# demohub

./: README.md  readme  readme.cpp
2048/: 2048.cpp  Main.cpp
BigInt/: BigInt.cpp  Main.cpp
C11/: 初始化列表.cpp  完美转发.cpp  左值、将亡值、纯右值.cpp  常量递归.cpp  强枚举类型.cpp
C11/class/: final.cpp  friend.cpp  friend_for_test.cpp  init.cpp  override.cpp  指针成员和拷贝构造.cpp
C11/decltype/: decltype.cpp  for_each.cpp  simple.cpp  typeid.cpp
C11/lambda/: exmple1.cpp  常量性.cpp  捕捉方式.cpp  转化成函数.cpp
C11/pod/: 用户自定义字面量.cpp  非受限联合体.cpp
C11/smart_pointer/: weak_ptr.cpp
C11/template/: a.out  all.cpp  newprintf.cpp  变长模板2.cpp  变长模板4.cpp  外部模板.cpp  委托构造函数.cpp  局部和匿名类型作为模板参数.cpp  继承构造函数.cpp  边长模板1.cpp  边长模板3.cpp
C11/多线程/: quit_exit.cpp  内存模型.cpp  内存模型1.cpp  内存模型2.cpp  原子操作.cpp  自旋锁.cpp
DB/mysql/: connect1  mysqlapi  test.cpp
LED_digit_Recongnition/: cli.c  incli.c  inser  inser.c  outcli.c  outser.c  ser.c
LED_digit_Recongnition/output/: inser.c
Mazepath/: .mazepath.cpp.swn  .mazepath.cpp.swo  .mazepath.cpp.swp  main.cpp  mazepath  mazepath.cpp  mazepath.h
STL/: readme.txt
Unix/1/dir/: stat.c
Unix/1/myls/: ls.c  main.c
Unix/3/: cpoy  test
Unix/IO/: io  io.c  io_getc  io_getc.c
Unix/IO/IO/: data
Unix/IO/myls/: ls.h  test
Unix/IO/process/: showID
Unix/IPC/fifo/: Makefile  client.c  fifo.c  fifo.h  fstat  fstat.c  limts  limts.c  severt.c
Unix/IPC/mesg/: cli.c  msg.h  servet.c
Unix/IPC/pipe/: double_fifo  double_fifo.c  double_pipe.c  popen.c  price_pipe.c
Unix/IPC/posix/: cli.c  mq_receive.cpp  msg.h  pr_ipc_name.h  send  send.c  servet.c
Unix/IPC/sem/: create_sem  create_sem.c  get_sem.c  getipc.c  ipc.c  ipc.h  my_lock.c  p_sem.c  remove_sem.c  sem.h  sem_setvalues.c  semgetvalues.c  set_sem.c  v_sem.c
Unix/IPC/shm/: Makefile  incr2.c  incr3.c  incr_dev_zero.c  incr_map_anon.c  incrl.c  shm.h
Unix/IPC/shm_v/: cli.c  ser.c  shm.h
Unix/copy/: cpoy.c
Unix/lock/: test.c  test1.c
Unix/lock/pc/: test.c
Unix/lock/wrlock/: my_pthread_rwlock.h  test  test.c
Unix/log/: test  test.c
Unix/log/test_log/: log.c  log.h  log.txt  test  test.c
Unix/myls/: ls  ls.c
Unix/others/longjmp/: jmp  jmp.c  jmp2
Unix/process/: deamon  deamon.c  dif_fork  dif_fork.c  exec.c  execve  execve.c  pr_exit  pr_exit.c  processimage  processimage.c  shell  shell.c  showID.c  tell.c  wait  wait.c
Unix/signal/: outsignal.c  signalerror.c  sleep.c
Unix/socket/: connect.h  daytimetcpcli.c  socket.h  test.c  utili.h
Unix/socket/IO/: cli.c  udpcli.c
Unix/socket/UDP/: cli  cli.c  ser  ser.c
Unix/socket/getpublicip/: compiling_error.txt  test  test.cpp
Unix/socket/server/: calc.h  cli  cli.c
Unix/socket/signal/: ser.cpp
Unix/socket/simple_connetion/: cli  cli.c  (+4 more)
Unix/thread/: Makefile  clean_pthread.c  create_pthread  create_pthread.c  exit_pthread  exit_pthread.c  my_pthread.h  thread.c
fastdfs/: CMakeLists.txt  Main.cc  fdfs_api.cc  fdfs_api.h  make_log.cc  make_log.h
frame/libevent/: test.cpp
getopt/: getopt  getopt.c
mode/: AbstactFactory.cpp  Adapter.cpp  Memento.cpp  Observer.cpp  Prototype.cpp  bulider.cpp  factory.cpp  singleton.cpp  visitor.cpp
muduo/1/: 1.1.cpp  1.2.cpp  1.3.cpp  1.4.cpp  1.5.cpp  1.6.cpp  1.7.cpp
muduo/2/: CustomerData.cpp  MutexLock.hpp  Singleton.cpp
muduo/examples/: CMakeCache.txt  CMakeLists.txt  Makefile  Project.cbp  cmake_install.cmake  examples.cbp
muduo/examples/hub/: CMakeCache.txt  CMakeLists.txt  Makefile  Project.cbp  cmake_install.cmake  codec.cc  codec.h  hub.cc  pub.cc  pubsub.cc  pubsub.h  sub  sub.cc
muduo/examples/socket_4a/: CMakeLists.txt  Makefile  cmake_install.cmake  socket_4a.cbp  socket_4a.cc  tunnel.h
muduo/muduo/: CMakeLists.txt
muduo/muduo/muduo/base/: Atomic.h  BlockingQueue.hpp  BoundedBlockingQueue.hpp  Condition.hpp  CountDownLatch.hpp  CurrentThread.h  Date.cc  Date.h  Exception.cpp  Exception.h  FileUtil.cc  FileUtil.h  LogFile.cpp  LogFile_test.hpp  LogStream.cc  LogStream.h  Loggin.cc  Loggin.h  Mutex.hpp  ProcessInfo.cc  ProcessInfo.h  Singleton.h  StringPiece.h  Thread.cpp  Thread.h  ThreadLocal.h  ThreadLocalSingletion.h  ThreadPoll.cpp  ThreadPool.h  TimeZone.cc  TimeZone.h  Timestamp.cc  Timestamp.h  Types.h  WeakCallback.h  copyable.h
muduo/muduo/muduo/net/: Acceptor.cc  Acceptor.h  Buffer.cc  Buffer.h  Callbacks.h  Channel.cc  Channel.h  Connector.cc  Connector.h  Endian.h  EventLoop.cc  EventLoop.h  EventLoopThread.cc  EventLoopThread.h  EventLoopThreadPool.cc  EventLoopThreadPool.h  InetAddress.cc  InetAddress.h  Poller.cpp  Poller.hpp  Socket.cc  Socket.h  SocketsOpt.cc  SocketsOpt.h  TcpClient.cc  TcpClient.h  TcpConnection.cc  TcpConnection.h  TcpServer.cc  TcpServer.h  Timer.cc  Timer.h  TimerId.h  TimerQueue.cc  TimerQueue.h
muduo/muduo/muduo/net/Poller/: DefaultPoller.cc  EPollPoller.cc  EPollPoller.h  PollPoller.cpp  PollPoller.hpp
muduo/muduo/muduo/test/base/: Atomic_unittest.cpp  BlockingQueue_unittest.cc  BoundedBlockingQueue_unittest.cc  EventLoop_unittest.cc  Exception_unittest.cpp  LogFile_test.cc  LogStream_test.cc  Logging_test.cc  TheadLocal_test.cc  ThreadLocalSingle_test.cc  Timestamp_unittest.cpp
muduo/muduo/muduo/test/net/: Buffer_unittest.cc  EchoServer_unittest.cc  EventLoopThreadPoll_test.cc  EventLoopThread_unittest.cc  EventLoop_unittest.cc  TcpClient_reg1.cc  TcpClient_reg2.cc  TcpClient_reg3.cc
project/2048/: 2048.h
project/BigInt/: BigInt.h  Opreator.cpp  Opreator.h
project/LED_digit_Recongnition/: a.out  incli  outcli  outser
project/chatroom/: cli  cli.cpp  cli2.cpp  data.h  newcli.cpp  newser.cpp  ser  ser.cpp  socket.h  utili.h
thread/: CMakeLists.txt
thread/2/: CMakeLists.txt  oops.cc
usefor/xml/: a.out  main.cpp  tinyxml2.cpp
加密解密/: CMakeLists.txt
加密解密/Des/: CMakeLists.txt  Des.h  main.cc
加密解密/Rc4/: CMakeLists.txt  Rc4.cc  Rc4.h  main.cc
加密解密/md5/: CMakeLists.txt  main.cc  md5.cc  md5.h
加密解密/sha_1/: CMakeLists.txt  main.cc  sha.cc  sha.h
数据压缩/: CMakeLists.txt  bit.cc  bit.h  bit_test.cc  bitree.cc  bitree.h  compress.h  heap.cc  heap.h  huffman.cc  huffman_test.cc  lz77.cc  lz77_test.cc  main.cc  pqueue.cc  pqueue.h
(+44 files in other folders)
